syntax="proto3";
package rpc;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

import "google/api/annotations.proto";
import "blocc/block.proto";

option go_package = "git.coinninja.net/backend/blocc/server/rpc";

service MemPoolRPC {

    rpc GetMemPoolStats(Symbol) returns (MemPoolStats) {
        option (google.api.http) = {
            get: "/mempool/stats"
        };
    }

    rpc GetMemPoolStream(Symbol) returns (stream blocc.Tx) {
        option (google.api.http) = {
            get: "/mempool/stream"
        };
    }

}

message Symbol {
    string symbol = 1;
}

message MemPoolStats {
    int64 time = 1;
    int64 count = 2;
    int64 size = 3 [(gogoproto.customname) = "MPSize"];; 
}
